[package]
name = "request-animation-frame"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.77"
embedded-graphics-web-simulator = {path = "../.."}
embedded-graphics = "0.7.1"
utils = { path = "/Users/ace/play/lib/utils" }
effects = { path = "/Users/ace/play/medusa/effects" }
console_error_panic_hook = "0.1.5"
rgb = "0.8"
eg-bdf = { path = "/Users/ace/play/clone/bdf/eg-bdf"}

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
]

