[package]
name = "request-animation-frame"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2"
embedded-graphics-web-simulator = {path = "../.."}
embedded-graphics = "0.7.1"
utils = { path = "/Users/ace/play/lib/utils" }
effects = { path = "/Users/ace/play/medusa/effects" }
graphics = { path = "/Users/ace/play/lib/graphics" }
console_error_panic_hook = "0.1.5"
rgb = "0.8"
eg-bdf = { path = "/Users/ace/play/clone/bdf/eg-bdf"}
randomize = "3.0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
]

